fixed timeline problem with overflow-x

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,7 @@ className="blob rot"
       }
 }
 
-html {
+html, body {
   --line-color: #e5e7eb;
+  overflow-x: hidden;
 }
